# xtremes

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
deprec/: api_biascorrection_errorneous.rst  biascorrection_errorneous.rst
docs/: .readthedocs.yml  environment.yml  requirements.txt
docs/source/: api.rst  api_biascorrction.rst  api_biascorrection.rst  api_biascorrection_errorneous.rst  api_bootstrap.rst  api_hos.rst  api_misc.rst  api_topt.rst  biascorrection.rst  bootstrap.rst  conf.py  higherorderstatistics.rst  index.rst  miscellaneous.inc  miscellaneous.rst  references.bib  topt.rst  usage.rst
docs/source/notebooks/: bootstrap.ipynb  estimators.ipynb  real_data.ipynb  timeseries.ipynb
examples/covariance_formulas/: cov_matrix_stationary.nb  sliding_v2.nb
src/test_xtremes/: HigherOrderStatistics.py  __init__.py  miscellaneous.py
src/xtremes/: HigherOrderStatistics.py  biascorrection.py  biascorrection_topt.py  bootstrap.py  miscellaneous.py  topt.py
test_xtremes/: pyproject.toml
test_xtremes/src/test_xtremes/: HigherOrderStatistics.py  __init__.py  miscellaneous.py
tests/: test_HigherOrderStats.py  test_bootstrap.py  test_miscellaneous.py  test_topt.py
