[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-xtremes"
version = "0.2.1"
dependencies = [
  "numpy",
  "scipy",
  "pynverse",
  "tqdm",
  "asyncio"
]
authors = [
  { name="Erik Haufs", email="erik.haufs@rub.de" },
]
description = "Testing publication of xtremes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/haufse/xtremes" # to be changed optionally
Repository = "https://github.com/haufse/xtremes"
Documentation = "https://xtremes.readthedocs.io/en/latest/"
#Issues = "https://github.com/pypa/sampleproject/issues"
